[package]
name = "string_closure"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7.5"
actix-web = { version = "0.7.13" }
websocket = "0.23.0"
serde_json = "0.7.0"
serde = "0.5.3"
time = "0.1.34" 
tinyosc = "0.0.3"
failure = "0.1.1"
env_logger = "0.5.13"
log = "0.4.0"
toml = "0.4.8"

